# roboptim-core-manifold

./: .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md  TODO  appveyor.yml
include/roboptim/core/decorator/manifold-map/: descriptive-wrapper.hh  descriptive-wrapper.hxx  instance-wrapper.hh  instance-wrapper.hxx  manifold-desc.hh  manifold-desc.hxx  manifold-map.hh
include/roboptim/core/filter/: manifold-map.hh  manifold-map.hxx
include/roboptim/core/filter/manifold-map/: descriptive-wrapper.hh  descriptive-wrapper.hxx  descriptive_wrapper.hh  descriptive_wrapper.hxx  instance-wrapper.hh  instance-wrapper.hxx  instance_wrapper.hxx  manidesc.hh  manidesc.hxx  manifold-desc.hh  manifold-desc.hxx  manifold-map.hh  wrapinmanifold.hh
include/roboptim/core/manifold-map/: util.hh
include/roboptim/core/manifold-map/decorator/: descriptive-wrapper.hh  descriptive-wrapper.hxx  dispatcher.hh  dispatcher.hxx  function-on-manifold.hh  function-on-manifold.hxx  instance-wrapper.hh  instance-wrapper.hxx  manifold-desc.hh  manifold-desc.hxx  manifold-map.hh  manifold-merger.hh  manifold-problem-factory.hh  manifold-problem-factory.hxx  problem-factory.hh  problem-factory.hxx  problem-on-manifold.hh  problem-on-manifold.hxx  sum-on-manifold.hh  sum-on-manifold.hxx  wrapper-on-manifold.hh  wrapper-on-manifold.hxx
include/roboptim/core/manifold-map/decorator/helper/: base-function-on-manifold.hh  base-function-on-manifold.hxx  differentiable-function-on-manifold.hh  differentiable-function-on-manifold.hxx  generic-differentiable-function-on-manifold.hh  generic-differentiable-function-on-manifold.hxx  twice-differentiable-function-on-manifold.hh  twice-differentiable-function-on-manifold.hxx
src/: CMakeLists.txt  manifold-merger.cc  roboptim-core-manifold-precompile.cc
tests/: CMakeLists.txt  decorator-manifold-map.cc  descriptive-wrapper.cc  descriptive-wrapper.stdout  filter-manifold-map-1.stdout  filter-manifold-map-2.stdout  filter-manifold-map-3.stdout  filter-manifold-map.cc  filter-manifold-map.stdout  manifold-map-1.stdout  manifold-map-2.stdout  manifold-map-3.stdout  manifold-map.cc  manifold-map.stdout  manifold-merger.cc  problem-factory.cc  sum-on-manifold.cc  sum-on-manifold.stdout  util.cc  util.stdout
